--- a/home/style.css
+++ b/home/style.css
@@ -151,11 +151,13 @@
         width: 80vw;
         height: auto;
         min-height: 100vh;
+        max-height: 100vh;
         background: var(--white);
         position: fixed;
         top: 0px;
         left: 0px;
         z-index: 200;
+        overflow: scroll;
     }
 
     .menu-mobile-logo {
@@ -170,7 +172,7 @@
 
     .menu-mobile-logo img {
         width: 100%;
-        max-width: 250px;
+        max-width: 225px;
         height: auto;
     }
 
